    resets the statistics just after getting them.

* Generated specification documentation:
  - Added DTD validation before any stylesheet transformation.
  - Set the output elements in the correct order for function_1_0.dtd.

* Build and release process:
  - The CVSROOT argument is added in the cvs tasks in order to be able to
    create a release on Windows.

* Fixed bug. If the pattern for a pattern type contained a double quote ('"')
  character, then the generated Java classes for that type would not be
  correctly generated and it would not compile.
  This bug has been in the XSLT code (escapepattern.xslt) since XINS 0.1.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.168:

* Generated specification documentation:
  - Added the version number to the DTD files.

* XINS/Java Server Framework:
  - Fixed translations for log messages 2007 and 2008.
  - Added a new call framework to get the input parameters, to set the
    output parameters and to report a result code.
    This framework is by default disabled in this version because of
    incompatibilities with XINS 0.167 but it can be enabled by changing
    the newCallFramework variable in xins-project_to_ant-build.xslt and
    editing the src/java-server-framework/org/xins/server/Function.java file.

* XINS/Java Common Library:
  - Fixed: Creating a Date from a string threw an IndexOutOfBoundsException
    for the type _date.
    This bug has been in the code since the introduction of the
    Date class in XINS 0.166

* Generated build file:
  - The build targets creating the APIs, functions, types and result codes
    have been updated to link to the correct DTD, to include the description
    and to rename 'project' with 'api'.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.167:

* Generated type classes:
  - Supporting '/' (slash) in item names.
